tests/NormalTests/paczka1/small_fuzzy/52079839.err
Error in line 2: 2Uqz13fuT8 A232 24,9
Error in line 8: S578 A929 75,9
Error in line 5: DWJV7xzWQ S578 934,2
